# automatic_lidar_camera_calibration

./: CMakeLists.txt  Makefile  README.md
data/samples/: calibration_handler_param.json  camera_info.json  initial_guess.json
examples/: SensorsCalibApp.cpp
include/sensors_calib/: CalibrationHandler.hpp  HistogramHandler.hpp  ProbabilityHandler.hpp  sensors_calib.hpp
include/sensors_calib/impl/: CalibrationHandler.ipp  HistogramHandler.ipp
include/sensors_calib/optimization/: Gaussian.hpp  KernelDensityEstimation.hpp  Types.hpp  optimization.hpp
include/sensors_calib/utils/: ParamConfig.hpp  Utility.hpp
src/: CMakeLists.txt  CalibrationHandler.cpp  HistogramHandler.cpp  ProbabilityHandler.cpp
tests/: CMakeLists.txt  RandDouble.hpp  TestGaussian.cpp  TestKernelDensityEstimation.cpp
